# calendar-scheduler-openenv

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  calendar_scheduler_environment.py  requirements.txt
