[project]
name = "openenv-calendar-scheduler"
version = "0.1.0"
description = "Calendar Scheduler for OpenEnv"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
# This points to the main function in server/app.py
server = "server.app:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
